--- a/configs/multiple_speed_config.yaml
+++ b/configs/multiple_speed_config.yaml
@@ -2,16 +2,16 @@
 
 # basic config
 task_name: LTF
-is_training: 1
-model_id: Wspd6_cfd_wrf
+is_training: 0
+model_id: Spd6_cfd_wrf
 model: Informer
 
 # data loader
 data: turbine
 root_path: ./datasets/WFP/
 data_path: Turbine_Patv_Spd_15min_filled.csv
-features: S
-target: Wspd_6
+features: M
+target: [Wspd_6, Wspd_7,]
 subcol: []
 freq: t
 checkpoints: ./checkpoints/
@@ -23,7 +23,7 @@ use_hybrid:
   flag: true
   root_path: ./datasets/CFD/
   data_path: wrf_converted_turbine_data.csv
-  target: Wspd_6
+  target: [Wspd_6, Wspd_7,]
 
 # filter setting
 use_filter:
