--- a/configs/multiple_power_config.yaml
+++ b/configs/multiple_power_config.yaml
@@ -10,8 +10,11 @@ model: Informer
 data: turbine
 root_path: ./datasets/WFP/
 data_path: Turbine_Patv_Spd_15min_filled.csv
+res_path: ./results/
 features: M
-target: [Patv_6, Patv_7]
+target:
+  - Patv_6
+  - Patv_7
 subcol: []
 freq: t
 checkpoints: ./checkpoints/
@@ -23,7 +26,9 @@ use_hybrid:
   flag: true
   root_path: ./datasets/CFD/
   data_path: wrf_converted_turbine_data.csv
-  target: [Patv_6, Patv_7]
+  target:
+    - Patv_6
+    - Patv_7
 
 # filter setting
 use_filter:
@@ -89,3 +94,4 @@ p_hidden_dims:
   - 128
   - 128
 p_hidden_layers: 2
+short_task_name: LTF
