--- a/configs/multiple_speed_config.yaml
+++ b/configs/multiple_speed_config.yaml
@@ -2,7 +2,7 @@
 
 # basic config
 task_name: LTF
-is_training: 1
+is_training: 0
 model_id: Wspd_cfd_wrf
 model: Informer
 
@@ -52,6 +52,14 @@ use_hybrid:
     - Wspd_12
     - Wspd_13
 
+# calibration setting
+use_calibrate:
+  flag: false
+  root_path: ./datasets/WRF/
+  data_path: extracted_wrf_data.csv
+  target:
+    - speed
+
 # filter setting
 use_filter:
   flag: false
@@ -60,8 +68,8 @@ use_filter:
   cutoff: 0.1
 
 # forecasting task
-seq_len: 96
-label_len: 48
+seq_len: 256
+label_len: 96
 pred_len: 96
 seasonal_patterns: Monthly
 inverse: true
@@ -82,9 +90,9 @@ d_model: 512
 n_heads: 8
 e_layers: 3
 d_layers: 2
-d_ff: 1024
+d_ff: 2048
 moving_avg: 25
-factor: 3
+factor: 1
 distil: true
 dropout: 0.15
 embed: timeF
